manifest/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: insahi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: insahi-chat
  template:
    metadata:
      labels:
        app: insahi-chat
    spec:
      containers:
        - name: chat
          image: daul0519/chat-service:4.3
          ports:
            - containerPort: 1004


---


apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: insahi

spec:
  type: ClusterIP
  selector:
    app: insahi-chat

  ports:
    - port: 1004
      targetPort: 1004
