manifest/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: insahi
  labels:
    app: gateway
spec:
  replicas: 4
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: jahee24/gateway-service:4.0
          ports:
            - containerPort: 1006
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: insahi

spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - port: 1006       # 클러스터 내부에서 쓸 포트
      targetPort: 1006 # 컨테이너 내 gateway 포트
