manifest/hrm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm
  namespace: insahi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: insahi-hrm
  template:
    metadata:
      labels:
        app: insahi-hrm
    spec:
      containers:
        - name: hrm
          image: daul0519/hrm-service:b346d58
          ports:
            - containerPort: 1010
---

apiVersion: v1
kind: Service
metadata:
  name: hrm-service
  namespace: insahi

spec:
  type: ClusterIP
  selector:
    app: insahi-hrm

  ports:
    - port: 1010
      targetPort: 1010
