manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: insahi
  labels:
    project: insahi
spec:
  ingressClassName: nginx
  rules:
    - host: insahi.gateway
      http:
        paths:
          - backend:
              service:
                name: gateway-service
                port:
                  number: 1006
            path: /
            pathType: Prefix
